2009-09-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* UI/PreferencesUI/UIxPreferences.m 
	We now fallback to the default system selected day.

2009-09-22  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Updated the documentation for the Invisible -> Flagged
	mail column change.
	* SoObjects/Contacts/NGVCard+SOGo.m - better error-handling.

2009-09-22  Cyril Robert <crobert@inverse.ca>

	* UI/Scheduler/UIxCalFolderActions.m (exportAction): Used
	bareFetchFields from SOGoAppointmentFolder instead of fetchFields
	from SOGoGCSFolder.

2009-09-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m (-fetchPlainTextParts:):
	handle the fact that the "fetch" key in a RawResponse (NGHashMap)
	may not be the only response. Since [NGHashMap objectForKey:]
	returns only the first one, we use the new "flattenedDictionaries"
	to make sure we can retrieve all requested keys.

	* SoObjects/SOGo/NSArray+Utilities.m (-flattenedDictionaries): new
	method that merges the keys and values of all contained
	dictionaries into one single dictionary.

	* Tests/webdavlib.py (_WD_XMLTreeElement.__init__): added a new
	optional parameter "attributes" that enables the setting of
	element attributes during the rendering of the element.

	* Tests/webdavlib.py (CalDAVCalendarQuery): new subclass of
	WebDAVReport that handles "calendar-query" reports.

	* UI/MailerUI/UIxMailListView.m (+initialize): new method
	initialized the two new global NSArray: defaultColumnOrder
	(hardcoded values), udColumnOrder (system default values).
	(-columnsDisplayOrder): we now cache the resulting set of keys.
	We also test for the presence of invalid keys by comparing the
	configured array with the hardcoded one above.
	(-setCurrentColumn:, currentColumn): new accessors.

2009-09-21  Ludovic Marcotte  <lmarcotte@inverse.ca>

	*  SOPE/NGCards/versitCardsSaxDriver/VSSaxDriver.m
	Avoid lameness when handling QP-encoded content.

2009-09-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
